# At-Risk

./: .gitattributes  .gitignore  README.md  pyproject.toml
02_notebooks/: 2_Recursive_Forecasting.ipynb
04_results/: h12_lagged.csv  h3_lagged.csv  h6_lagged.csv
at_risk/: __main__.py  cli.py  config.py  data.py  evaluation.py  features.py  forecasting.py  models.py  optimization.py
at_risk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data/processed/: X_transformed_monthly.pkl
data/raw/: ads_index.csv  fredmd.csv  yieldspread.csv
notebooks/: Analysis.ipynb
